--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
+@tailwind utilities;
+
+@font-face {
+  font-family: "geist";
+  src: url("/assets/fonts/GeistVF.woff") format("woff");
+  font-weight: 100 900;
+  font-style: normal;
+}
