--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,38 @@
-<header >
+<header>
   <app-navbar></app-navbar>
 </header>
 <main>
   <!-- hero -->
-  <section class="h-screen w-screen bg bg-cover bg-center bg-no-repeat">
-    <p class="font-semibold font-display text-5xl">home works!</p>
+  <section
+    class="h-dvh w-screen bg bg-cover bg-center bg-no-repeat flex flex-col items-center justify-center text-light text-center px-2 md:px-4 py-4 md:pt-12"
+  >
+    <span
+      class="text-xs md:text-sm font-semibold grad text-dark rounded-full px-4 py-2"
+    >
+      Your Gateway to Creative Excellence
+    </span>
+    <h1
+      class="my-8 text-balance text-5xl md:font-light md:text-7xl lg:text-8xl max-w-2xl md:max-w-3xl lg:max-w-5xl"
+    >
+      Your On-Demand <span class="font-display">Creative</span> Studio
+    </h1>
+    <p
+      class="text-lightgray-600 text-sm md:text-lg max-w-2xl text-balance mb-8"
+    >
+      We are a design and development agency dedicated to crafting innovative
+      and creative digital solutions that shape the future.
+    </p>
+    <div class="flex flex-wrap gap-4 items-center justify-center">
+      <button
+        class="text-dark font-medium bg-light px-6 py-3 rounded-full hover:bg-secondary transition duration-300 ease-in-out"
+      >
+        Book a Consultation
+      </button>
+      <button
+        class="font-medium border-2 border-light px-6 py-3 rounded-full hover:border-primary transition duration-300 ease-in-out"
+      >
+        See Our Work
+      </button>
+    </div>
   </section>
 </main>
