--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     class="flex items-center flex-wrap lg:flex-nowrap justify-between mx-auto py-2 pr-2 pl-4 lg:gap-24"
   >
     <button class="flex items-center space-x-3">
-      <img src="assets/images/l.svg" class="h-6 lg:h-8" alt="Asteria Logo" />
+      <img src="assets/images/logo-light.svg" class="h-6 lg:h-8" alt="Asteria Logo" />
     </button>
 
     <button
