add services section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,17 +4,18 @@
 <main>
   <!-- hero -->
   <section
-    class="h-dvh w-screen bg bg-cover bg-center bg-no-repeat flex flex-col items-center justify-center text-light text-center px-2 md:px-4 py-4 md:pt-12"
+    class="h-dvh bg bg-cover bg-center bg-no-repeat flex flex-col items-center justify-center text-light text-center px-2 md:px-4 py-4 md:pt-12"
   >
     <span
       class="text-xs md:text-sm font-semibold grad text-dark rounded-full px-4 py-2"
     >
-      Your Gateway to Creative Excellence
+      Where Web Dreams Sparkle and Shine
     </span>
     <h1
       class="my-8 text-balance text-5xl md:font-light md:text-7xl lg:text-8xl max-w-2xl md:max-w-3xl lg:max-w-5xl"
     >
-      Your On-Demand <span class="font-display">Creative</span> Studio
+      Crafting Websites as <span class="font-display">Brilliant</span> as the
+      Stars
     </h1>
     <p
       class="text-lightgray-600 text-sm md:text-lg max-w-2xl text-balance mb-8"
@@ -35,4 +36,28 @@
       </button>
     </div>
   </section>
+
+  <!-- spacer -->
+  <div class="h-20 md:h-40"></div>
+
+  <!-- services -->
+  <section class="px-2 md:px-4">
+    <div class="text-center">
+      <h1 class="text-primary-700 md:text-lg font-semibold">OUR SERVICES</h1>
+      <h2 class="font-semibold text-3xl md:text-4xl lg:text-6xl my-4 md:my-6">
+        Elevate Your Digital Presence
+      </h2>
+    </div>
+
+    <div
+      class="w-fit mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 px-2 md:px-4 my-8 md:my-12"
+    >
+      @for (service of services; track $index) {
+      <app-service-card [service]="service"></app-service-card>
+      }
+    </div>
+  </section>
+
+  <!-- spacer -->
+  <div class="h-20 md:h-40"></div>
 </main>
