--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!-- <app-navbar></app-navbar> -->
+<header>
+  <app-navbar></app-navbar>
+</header>
 <router-outlet></router-outlet>
 <!-- <app-footer></app-footer> -->
