--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,31 +1,25 @@
-.bg {
-  background-image: url("../../../assets/images/bg.svg");
-}
-
 .grad {
-  background: rgb(177, 244, 241);
   background: linear-gradient(
     105deg,
-    rgba(177, 244, 241, 1) 0%,
+    #3856c4 0%,
     rgba(100, 77, 255, 1) 60%,
-    rgba(209, 186, 249, 1) 100%
+    rgb(201, 170, 255) 100%
   );
-  box-shadow: 0 0 20px rgba(177, 244, 241, 0.8);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   background-size: 400% 400%;
-  animation: gradientAnimation 10s infinite alternate ease;
+  animation: gradientAnimation 8s infinite alternate ease;
 }
 
 @keyframes gradientAnimation {
   0% {
     background-position: 0% 50%;
-    box-shadow: 0 0 20px rgba(177, 244, 241, 0.8);
   }
   50% {
     background-position: 100% 50%;
-    box-shadow: 0 0 35px rgba(209, 186, 249, 0.8);
   }
   100% {
     background-position: 0% 50%;
-    box-shadow: 0 0 20px rgba(177, 244, 241, 0.8);
   }
 }
