--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -23,7 +23,7 @@
 </div>
 <div
   [ngClass]="{ hidden: !isFlipped, block: isFlipped }"
-  class="flex flex-col gap-10 md:gap-20 bg-white w-fit shadow-md p-6 md:p-10 rounded-[3rem] max-w-md transition duration-300 ease-in-out h-full"
+  class="flex flex-col justify-between gap-10 md:gap-20 bg-white w-fit shadow-md p-6 md:p-10 rounded-[3rem] max-w-md transition duration-300 ease-in-out h-full"
 >
   <div>
     <h3 class="text-2xl md:text-3xl font-bold text-balance">
