fix: carousel overflow

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,5 +1,5 @@
 <ngx-slick-carousel
-  class="carousel"
+  class="carousel rounded-lg overflow-hidden"
   #slickModal="slick-carousel"
   [config]="slideConfig"
 >
