--- a/src/app/components/service-card/service-card.component.html
+++ b/src/app/components/service-card/service-card.component.html
@@ -1,15 +1,18 @@
 <div
-  class="flex flex-col gap-10 md:gap-20 bg-white w-fit shadow-md p-6 md:p-10 rounded-[3rem] max-w-md h-full"
+  class="flex flex-col justify-between gap-10 md:gap-20 bg-white w-fit shadow-md p-6 md:p-10 rounded-[3rem] max-w-md h-full"
   [ngClass]="{ hidden: isFlipped, block: !isFlipped }"
 >
-  <img
-    class="w-1/4 md:w-[35%] p-4 md:p-8 bg-primary-900 rounded-3xl"
-    [src]="service.img"
-    [alt]="service.title"
-  />
-  <h3 class="text-2xl md:text-3xl font-bold text-balance">
-    {{ service.title }}
-  </h3>
+  <div>
+    <img
+      class="w-1/4 md:w-[35%] p-4 md:p-8 bg-primary-900 rounded-3xl mb-10 md:mb-20"
+      [src]="service.img"
+      [alt]="service.title"
+    />
+    <h3 class="text-2xl md:text-3xl font-bold text-balance">
+      {{ service.title }}
+    </h3>
+  </div>
+
   <button
     class="w-full flex items-center text-start text-lg text-primary-700 hover:text-primary transition [&>span]:hover:bg-primary-900 duration-300 ease-in-out flex justify-between"
     (click)="isFlipped = true"
@@ -29,7 +32,9 @@
     <h3 class="text-2xl md:text-3xl font-bold text-balance">
       {{ service.title }}
     </h3>
-    <p class="font-light md:text-lg text-gray my-4">{{ service.description }}</p>
+    <p class="font-light md:text-lg text-gray-700 my-4">
+      {{ service.description }}
+    </p>
   </div>
   <button
     class="w-full flex items-center text-start text-lg text-primary-700 hover:text-primary transition [&>span]:hover:bg-primary-900 duration-300 ease-in-out flex justify-between"
