change service cards bg to white instead of light

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -53,24 +53,6 @@
   <div class="h-20 md:h-40"></div>
 
   <!-- services -->
-  <!-- <section class="px-2 md:px-4">
-    <div class="text-center">
-      <h1 class="text-primary-700 md:text-lg font-semibold">OUR SERVICES</h1>
-      <h2 class="font-semibold text-3xl md:text-4xl lg:text-6xl my-4 md:my-6">
-        Elevate Your Digital Presence
-      </h2>
-    </div>
-
-    <div
-      class="w-fit mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 px-2 md:px-4 my-8 md:my-12"
-    >
-      @for (service of services; track $index) {
-      <app-service-card [service]="service"></app-service-card>
-      }
-    </div>
-  </section> -->
-
-  <!-- services -->
   <section>
     <div
       class="w-full flex flex-col lg:flex-row justify-between gap-8 lg:gap-24"
@@ -97,7 +79,7 @@
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
       <div
-        class="flex flex-col gap-8 lg:gap-12 shadow-sm border-2 border-light-500"
+        class="flex flex-col gap-8 lg:gap-12 shadow-sm border-2 bg-white border-light-500"
       >
         <div class="w-full">
           <img
@@ -124,7 +106,7 @@
         </div>
       </div>
       <div
-        class="flex flex-col gap-8 lg:gap-12 shadow-sm border-2 border-light-500"
+        class="flex flex-col gap-8 lg:gap-12 shadow-sm border-2  bg-white border-light-500"
       >
         <div class="w-full">
           <img
@@ -151,7 +133,7 @@
       </div>
 
       <div
-        class="lg:col-span-2 flex flex-col lg:flex-row items-center gap-8 lg:gap-12 shadow-sm border-2 border-light-500 p-6 md:p-10 lg:p-16"
+        class="lg:col-span-2 flex flex-col lg:flex-row items-center gap-8 lg:gap-12 shadow-sm bg-white border-2 border-light-500 p-6 md:p-10 lg:p-16"
       >
         <div class="w-full">
           <img
