--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,14 +2,21 @@
   background: linear-gradient(
     105deg,
     #3856c4 0%,
-    rgba(100, 77, 255, 1) 60%,
-    rgb(201, 170, 255) 100%
+    #644dff 60%,
+    #c9aaff 100%
   );
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: 400% 400%;
   animation: gradientAnimation 8s infinite alternate ease;
+}
+
+.weeks {
+  background-image: linear-gradient(58deg, #644dff, #c9aaff);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @keyframes gradientAnimation {
